# ApollousaBot

./: .gitignore  Cargo.toml  LICENSE  README.md  db_helper.py
src/: main.rs  utils.rs
src/bot/: commands.rs  handler.rs
src/db/: action.rs  mod.rs  model.rs  schema.rs
src/scheduler/: reminder.rs
